Old back-end implementation start
